--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
         <link
     </head>
     <body>
-        <h1>Hi, I am Dibya Jyoti Bharali</h1>
+        <h1>Hi, I am Dibya Jyoti Bharali aka DJ</h1>
         <h2>How are you?</h2>
         <p>Lorem ipsum dolor, sit amet<b>Lorem ipsum dolor sit amet.</b> consectetur adipisicing elit. Et, aut?</p>
         <p>Lorem ipsum dolor sit amet <strong>Lorem ipsum dolor sit amet.</strong>consectetur adipisicing elit. Doloribus, nesciunt?</p>
